fix(css): Tweak color of selected items in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@
         --main-border-color: #2f2f2f;
         --main-fg-color: #dfdfdf;
         --nav-bg-color: #151515;
-        --nav-selected-color: #111111;
+        --nav-selected-color: #252525;
         --nav-slider-active-bg-color: #144617;
         --nav-slider-bg-color: #484848;
         --nav-slider-fg-color: #b0b0b0;
